; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_gtt_mgr.c_amdgpu_gtt_mgr_has_gart_addr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_gtt_mgr.c_amdgpu_gtt_mgr_has_gart_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttm_mem_reg = type { %struct.amdgpu_gtt_node* }
%struct.amdgpu_gtt_node = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@AMDGPU_BO_INVALID_OFFSET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @amdgpu_gtt_mgr_has_gart_addr(%struct.ttm_mem_reg* %0) #0 {
  %2 = alloca %struct.ttm_mem_reg*, align 8
  %3 = alloca %struct.amdgpu_gtt_node*, align 8
  store %struct.ttm_mem_reg* %0, %struct.ttm_mem_reg** %2, align 8
  %4 = load %struct.ttm_mem_reg*, %struct.ttm_mem_reg** %2, align 8
  %5 = getelementptr inbounds %struct.ttm_mem_reg, %struct.ttm_mem_reg* %4, i32 0, i32 0
  %6 = load %struct.amdgpu_gtt_node*, %struct.amdgpu_gtt_node** %5, align 8
  store %struct.amdgpu_gtt_node* %6, %struct.amdgpu_gtt_node** %3, align 8
  %7 = load %struct.amdgpu_gtt_node*, %struct.amdgpu_gtt_node** %3, align 8
  %8 = getelementptr inbounds %struct.amdgpu_gtt_node, %struct.amdgpu_gtt_node* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @AMDGPU_BO_INVALID_OFFSET, align 8
  %12 = icmp ne i64 %10, %11
  %13 = zext i1 %12 to i32
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
